--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "publish": [
       {
         "provider": "github",
-        "owner": "mate0s",
-        "repo": "voice-pc-agent-releases"
+        "owner": "cmateos91",
+        "repo": "voiceagent"
       }
     ],
     "electronUpdaterCompatibility": ">=2.16"
@@ -69,7 +69,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mate0s/voice-pc-agent-releases.git"
+    "url": "https://github.com/cmateos91/voiceagent.git"
   },
   "license": "MIT"
 }
