test(critical-paths): add built-in node:test suite and scripts
Adds coverage for intent detection, command safety, config sanity and session state.\nIncludes npm scripts for syntax checks and critical path regression tests.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "main": "electron/main.mjs",
   "scripts": {
     "start": "node server.js",
+    "check": "node --check server.js && node --check lib/*.js",
+    "test": "node --test test/critical-paths.test.js",
     "desktop": "electron .",
     "dist:win": "electron-builder --win nsis",
     "dist:dir": "electron-builder --dir",
